# SpineSource

./: README.md  README.txt  params.ini
SegComparer/: CMakeLists.txt  itkPGMImageIOFactory.cxx  itkPGMImageIOFactory.h  main.cxx  mainWindow.cpp  mainWindow.h  mainWindow.ui
Spine/: MainLogic.h  butterfly.cpp  itkCustomCanny.txx  itkDatImageIO.h  itkStructureTensorImageFilter.h  licence.txt  mainWindow.qrc  polyfit.cpp  slicePainter.h
Spine/qe/: Quad-Edge Data Structure and Library.htm  list.hh  obj.hh
SpineAI/: CMakeLists.txt  LHstuff.cpp  MainLogic.cpp  MainLogic.h  Spine.cxx  cascade.xml  declarations.h  itkCustomCanny.h  itkDatImageIO.cxx  itkDatImageIOFactory.h  itkStructureTensorImageFilter.txx  mainWindow.cpp  mainWindow.h  mainWindow.ui  slicePainter.cpp  slicePainter.h  slicePainter.ui  subdivBody.ma  vertebra.cpp  vertebra.h  voxelClassification.h
SpineAI/qe/: CMakeLists.txt  array.hh  cell.hh  edge.cc  edge.hh  face.cc  face.hh  obj.cc
SpineBB/: CMakeLists.txt  LHstuff.cpp  MainLogic.cpp  MainLogic.h  Spine.cxx  butterfly.cpp  declarations.h  itkDatImageIO.cxx  itkDatImageIO.h  itkDatImageIOFactory.cxx  mainWindow.cpp  mainWindow.h  mainWindow.qrc  mainWindow.ui  polyfit.cpp  qeUtil.cpp  slicePainter.cpp  slicePainter.h  slicePainter.ui  subdivBody.ma  vertebra.cpp  vertebra.h  vtkOBJWriter.cxx
SpineBB/qe/: CMakeLists.txt  cell.cc  cell.hh  face.cc  face.hh  obj.cc  vertex.cc  vertex.hh
SpineInitializations/Centers/: AKS3.init  AKa2.init  AKa3.init  AKa4.init  AKs5.init  AKs6.init  AKs7.init  AKs8.init  Ble.init  C002.init  DzZ_T1.init  DzZ_T2.init  F02.init  F03.init  F04.init  Geh.init  Hoe.init  LC.init  Lan.init  LanII.init  S01.init  S02.init  Sch.init  St1.init  case_10.init  case_2.init
SpineInitializations/Outline/: AKa2.init  AKa3.init  AKa4.init  AKs3.init  AKs5.init  AKs6.init  AKs7.init  AKs8.init  Ble.init  C002.init  DzZ_T1.init  DzZ_T2.init  F02.init  F03.init  F04.init  Geh.init  Hoe.init  LC.init  Lan.init  LanII.init  S01.init  S02.init  Sch.init  St1.init  case_10.init  case_2.init
SpineInitializations/SinglePoint/: AKS3.init  AKa2.init  AKa3.init  AKa4.init  AKs5.init  AKs6.init  AKs7.init  AKs8.init  Ble.init  C002.init  DzZ_T1.init  DzZ_T2.init  F02.init  F03.init  F04.init  Geh.init  Hoe.init  LC.init  Lan.init  LanII.init  S01.init  S02.init  Sch.init  St1.init
SpineMF/: CMakeLists.txt  LHstuff.cpp  MainLogic.cpp  MainLogic.h  Spine.cxx  butterfly.cpp  declarations.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  polyfit.cpp  qeUtil.cpp  slicePainter.cpp  slicePainter.h  slicePainter.ui  vec3.h  vertebra.cpp  vertebra.h  voxelClassification.cpp
SpineMF/qe/: cell.hh
SpineOptimizer/: CMakeLists.txt  datasets.txt  params.txt  spineOptimizer.cpp
centerRecTrainer/: CMakeLists.txt  OpenCV-2.4.3_apps_haartraining_cvsamples.cpp  bg.txt  bgManual.txt  clParam.txt  createInfo.cmd  cropBg.cmd  info.txt  main.cxx
centerRecTrainer/cascade/: params.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage20.xml  stage21.xml  stage22.xml  stage23.xml  stage24.xml  stage25.xml  stage26.xml  stage27.xml  stage28.xml  stage29.xml  stage3.xml  stage30.xml  stage31.xml  stage32.xml  stage33.xml  stage34.xml  stage35.xml  stage36.xml  stage37.xml  stage38.xml  stage39.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  (+1 more)
diagTruth/: CMakeLists.txt  diagTruth.cmd  diagTruth.cpp
diagTruth/qe/: cell.cc  permission.email  vertex.cc  vertex.hh
gcCompare/: CMakeLists.txt  CompareAI.cmd  CompareBBfreeForm.cmd  CompareBBheuristic.cmd  CompareBBoptimal.cmd  CompareMFoutline.cmd  CompareMFsinglePoint.cmd  ITK-ENH-Option-to-disable-sorting-by-size.patch  gcCompare.cmd  itkPGMImageIO.cxx  itkPGMImageIO.h  itkRelabelComponentImageFilter.h  itkRelabelComponentImageFilter.hxx  main.cxx
